[project]
name = "travel-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "llvmlite>=0.41.1",
    "pipecat-ai[silero,websocket]",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]
